Fix two validation bugs.  Revert change to Sky's package.json and webpack settings, I accidentally overwrote those settings in d5287c2

--- a/src/encrypt/encrypt.html
+++ b/src/encrypt/encrypt.html
@@ -322,9 +322,7 @@
             <label class="title required">How old were you when you started injecting drugs?</label>
             <input class="field-element"
             name="First Injection Age"
-            placeholder="Your answer"
-            required pattern="([1-9]|[1-8][0-9]|9[0-9])"
-            title="Enter a valid number 1-99"/>
+            placeholder="Your answer"/>
           </div>
 
           <div class="form-item field checkbox">
@@ -519,8 +517,8 @@
             <input class="field-element"
             name="Handle"
             placeholder="Enter handle"
-            required pattern="^[a-z0-9_-]{3,25}$"
-            title="Please use ONLY numbers, letters and _underlines_ with no spaces."
+            required pattern="^[aA-zZ0-9_-]{3,25}$"
+            title="Use ONLY numbers, letters and _underlines_."
             />
           </div>
 
