create anonymized csv

--- a/src/decrypt/decrypt.html
+++ b/src/decrypt/decrypt.html
@@ -13,6 +13,7 @@
   </div>
 </form>
 <h2> Responses </h2>
+<a id="csvanonymous" href="">Download Anonymized CSV</a>
 <table id="results">
 </table>
 </body>
