decrypt csv with private data, too

--- a/src/decrypt/decrypt.html
+++ b/src/decrypt/decrypt.html
@@ -14,6 +14,8 @@
 </form>
 <h2> Responses </h2>
 <a id="csvanonymous" href="">Download Anonymized CSV</a>
+<br />
+<a id="csvprivate" href="">Download PRIVATE DATA CSV</a>
 <table id="results">
 </table>
 </body>
